phase2_Dev/src/objects/Regulation__c.object
<CustomObject>
    <description>Regulations object stores the EEC regulations data that are used to populate visit checklists.  These data are managed in the EEC regulations system of record and are updated via a system integration whenever a regulation is updated.</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( 
    AND(NOT(ISBLANK( Date_Active__c )),
        TODAY() &gt;= Date_Active__c   ,
        OR( ISBLANK( Date_Removed__c ) , (Date_Removed__c  &gt;=  TODAY()) ) ) , 
        TRUE, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_description__c</fullName>
        <description>Can be used to provide additional information related to this regulation</description>
        <inlineHelpText>Can be used to provide additional information related to this regulation</inlineHelpText>
        <label>Additional description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_To__c</fullName>
        <description>Type of provider this regulation applies to</description>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlicensed Provider</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <description>Regulation article</description>
        <label>Article</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Active__c</fullName>
        <description>Date this regulation must be applied</description>
        <inlineHelpText>Date this regulation must be applied by Provider</inlineHelpText>
        <label>Date Active</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Removed__c</fullName>
        <description>Date this regulation was removed from legal framework</description>
        <inlineHelpText>Date this regulation was removed from legal framework</inlineHelpText>
        <label>Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCC_High_Risk_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, any non-compliance associated with this regulation will be counted as a substantiated non-compliance for the selection of the visit tool to use during monitoring / progress / enhanced monitoring visits.</inlineHelpText>
        <label>FCC High Risk Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_High_Risk_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, any non-compliance associated with this regulation will be counted as a substantiated non-compliance for the selection of the visit tool to use during monitoring / progress / enhanced monitoring visits.</inlineHelpText>
        <label>GSA High Risk Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if it&apos;s an high risk item</inlineHelpText>
        <label>High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Regulation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Higher level regulation in the hierarchy</description>
        <label>Parent Regulation</label>
        <referenceTo>Regulation__c</referenceTo>
        <relationshipLabel>Regulations</relationshipLabel>
        <relationshipName>Regulations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_P_High_Risk_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, any non-compliance associated with this regulation will be counted as a substantiated non-compliance for the selection of the visit tool to use during monitoring / progress / enhanced monitoring visits.</inlineHelpText>
        <label>R&amp;P High Risk Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_key__c</fullName>
        <description>Regulation key from external system (EECRS)</description>
        <label>Reg_key</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Regulation_Number__c</fullName>
        <formula>IF(CONTAINS(Name,&quot;_&quot;),LEFT(Name,LEN(Name)-9),Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulation Number</label>
        <type>Text</type>
    </fields>
    <label>Regulation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apply_to_Adoption</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Parent_Regulation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Adoption Agency</value>
        </filters>
        <label>Apply to Adoption Agency</label>
    </listViews>
    <listViews>
        <fullName>Apply_to_FCC</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Parent_Regulation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Family Child Care</value>
        </filters>
        <label>Apply to FCC</label>
    </listViews>
    <listViews>
        <fullName>Apply_to_Foster_Care</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Parent_Regulation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Foster Care Agency</value>
        </filters>
        <label>Apply to Foster Care Agency</label>
    </listViews>
    <listViews>
        <fullName>Apply_to_Group_Care</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Parent_Regulation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Group Care</value>
        </filters>
        <label>Apply to Group Care</label>
    </listViews>
    <listViews>
        <fullName>Apply_to_Large_Group</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Parent_Regulation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Large Group</value>
        </filters>
        <label>Apply to Large Group</label>
    </listViews>
    <listViews>
        <fullName>Apply_to_Small_Group</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Parent_Regulation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Small Group</value>
        </filters>
        <label>Apply to Small Group</label>
    </listViews>
    <listViews>
        <fullName>Apply_to_Temp_Shelter</fullName>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>Parent_Regulation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Temporary Shelter</value>
        </filters>
        <label>Apply to Temporary Shelter</label>
    </listViews>
    <listViews>
        <fullName>High_risk_regulations</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Article__c</columns>
        <columns>FCC_High_Risk_Reg__c</columns>
        <columns>GSA_High_Risk_Reg__c</columns>
        <columns>R_P_High_Risk_Reg__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FCC_High_Risk_Reg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>GSA_High_Risk_Reg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>R_P_High_Risk_Reg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>High risk regulations</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <roleAndSubordinatesInternal>Admin</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Associate_Commissioner_of_Investigations</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Executive_and_Directors</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>FCC_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Investigator</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Licensor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Program_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>R_P_Licensor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>R_P_Supervisor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Regional_Director</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SLGSA_Licensor</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SLGSA_Supervisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Regulations</fullName>
        <columns>NAME</columns>
        <columns>Date_Removed__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Regulations</label>
    </listViews>
    <nameField>
        <label>Regulation No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>